@@ -2,6 +2,7 @@ package application.projectmanagement;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Project {
 	
@@ -46,14 +47,14 @@ public class Project {
 
 	public List<ProjectActivity> getProjectActivities(){
 		return projectActivities;
-	}
+	} 
 
 	public boolean isEmployeeInProject(Employee e) {
 		return getActivitiesForEmployee(e).size() > 0;
 	}
 
 	public List<ProjectActivity> getActivitiesForEmployee(Employee e) {
-		return projectActivities.stream().filter(projectActivity -> projectActivity.hasEmployee(e)).toList();
+		return projectActivities.stream().filter(projectActivity -> projectActivity.hasEmployee(e)).collect(Collectors.toList());
 	} 
 
 	/**
